<resources>
    <string name="app_name">iRemember</string>
    <string name="login_text">Login</string>
    <string name="welcome_string">Welcome</string>
    <string name="email_hint_string">example@ucsc.edu</string>
    <string name="user_string">User</string>
    <string name="welcome_text">Welcome!</string>
    <string name="logout_text">Logout</string>
    <string name="record_location">Record Location</string>
    <string name="map">Map</string>
    <string name="tracked_item_list">Items</string>
    <string name="update">update</string>
    <string name="addBtn">Add</string>
    <string name="find">Find</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="editTextHint">Remember</string>
    <string name="title_activity_maps">Map</string>
    <string name="remember">Remember</string>
    <string name="directions">Directions</string>
    <string name="title_activity_splash_screen">Splash_screen</string>
    <string name="app_logo">App Logo</string>
    <string name="walking">Walking</string>
    <string name="driving">Driving</string>
    <string name="splash_screen_icon" />
    <string name="iremember">Remembers So You Don\'t Have To</string>
    <string name="textview">TextView</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="notes">Notes</string>
    <string name="description">Description</string>
    <string name="item">Item</string>
    <string name="take_photo">Take photo</string>
    <string name="upload">Upload</string>
    <string name="save">Save</string>
    <string name="take_photo2">Take Photo</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="path">Path</string>
</resources>
