<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/dataListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/itemText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/itemText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="110dp"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/editTextHint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataListView"
        tools:targetApi="o" />

    <LinearLayout
        android:layout_width="385dp"
        android:layout_height="110dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemText"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/deleteBtn"
            style="@android:style/Widget.Material.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="deleteItem"
            android:text="@string/delete"
            android:textSize="17sp"
            tools:layout_editor_absoluteY="339dp" />

        <Button
            android:id="@+id/addBtn"
            style="@android:style/Widget.Material.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="addItem"
            android:text="@string/addBtn"
            android:textSize="17sp"
            app:layout_constraintEnd_toStartOf="@+id/findBtn"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="373dp" />

        <Button
            android:id="@+id/findBtn"
            style="@android:style/Widget.Material.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="findItems"
            android:text="@string/search"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/deleteBtn"
            app:layout_constraintHorizontal_chainStyle="spread_inside" />

        <Button
            android:id="@+id/button"
            style="@android:style/Widget.Material.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="editEntry"
            android:text="@string/edit"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/deleteBtn" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>